<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout18"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ArchimedesGravAccFragment">

    <EditText
        android:id="@+id/archimedesForce_for_archimedesForceGravAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/archimedesForce"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/density_for_archimedesForceGravAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/density"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/archimedesForce_for_archimedesForceGravAcc"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/volume_for_archimedesForceGravAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/volume"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/density_for_archimedesForceGravAcc" />

    <Button
        android:id="@+id/btnCalculateArchimedesGravAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="535dp"
        android:background="#58aaed"
        android:text="@string/calculate"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume_for_archimedesForceGravAcc"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/archimedesGravAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gravAcc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateArchimedesGravAcc" />

</androidx.constraintlayout.widget.ConstraintLayout>