<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout13"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GravitationalAccFragment">

    <EditText
        android:id="@+id/grav_force_for_grav_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gravForce"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mass_for_grav_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mass"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grav_force_for_grav_acc" />

    <Button
        android:id="@+id/btnCalculateGravAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="162dp"
        android:background="#58aaed"
        android:text="@string/calculate"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mass_for_grav_acc" />

    <TextView
        android:id="@+id/gravitational_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gravAcc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculateGravAcc" />

</androidx.constraintlayout.widget.ConstraintLayout>