<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UniAccTimeFragment">

    <EditText
        android:id="@+id/velocity_for_time1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/velocity"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/firstVelocity_for_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstVelocity_for_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstVelocity"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@id/acc_for_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/velocity_for_time1"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/acc_for_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/acc"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@id/btnCalculateUniAccTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstVelocity_for_time" />

    <Button
        android:id="@+id/btnCalculateUniAccTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="535dp"
        android:background="#58aaed"
        android:text="@string/calculate"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@id/uni_acc_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acc_for_time"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/uni_acc_time"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:layout_width="match_parent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateUniAccTime"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>